<resources>
    <string name="app_name">Social Wall</string>

    <!-- Bottom navigation menu  -->
    <string name="tab_board">Board</string>
    <string name="tab_news">News</string>
    <string name="tab_profile">Profile</string>

    <!-- Sign in fragment -->
    <string name="username">Username</string>
    <string name="choose_username">Choose your username</string>
    <string name="mail">Mail</string>
    <string name="enter_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="create_password">Create a password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="goto_login"><u>Already have an account? Login here</u></string>

    <!-- Sending messages feedback -->
    <string name="add_message_success">Message added successfully!</string>
    <string name="add_message_error">Error sending message :(</string>

    <!-- Sending sign in feedback -->
    <string name="getting_user_error">Getting user error. Closing App :(</string>

    
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
