<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".SignUpActivity">

    <!-- Username -->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:textSize="16dp"
            android:textStyle="bold"
            android:text="@string/username"/>
    <EditText
            android:id="@+id/usernameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/choose_username"/>

    <!-- Mail -->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:textSize="16dp"
            android:textStyle="bold"
            android:text="@string/mail"/>
    <EditText
            android:id="@+id/emailInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email"/>

    <!-- Password -->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:textSize="16dp"
            android:textStyle="bold"
            android:text="@string/password"/>
    <EditText
            android:id="@+id/passwordInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/create_password"/>

    <!-- Submit -->
    <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/sign_in"/>

    <!-- Go to login -->
    <TextView
            android:id="@+id/GoToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goto_login"/>

    <!-- Progress Bar -->
    <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            android:layout_marginTop="@dimen/margin"/>

</LinearLayout>